<!--
    Nombre del proyecto: LucasMap
    Autores: Leonardo Duarte, Lucas Baruja, Iván Samudio, Ezequiel Arce
    Descripción: Archivo de recursos que contiene todas las cadenas de texto utilizadas en la aplicación, para permitir fácil localización y cambios de idioma.
    Fecha de creación: 24/10/2024
    Forma de utilizar: Define todos los textos visibles en la interfaz de usuario mediante identificadores, evitando la codificación en duro de textos en los layouts.
-->

<resources>
    <string name="app_name">LucasMap</string>
    <string name="distancia_total">Distancia total:</string>
    <string name="movimientos_bruscos">Movimientos bruscos:</string>
    <string name="button_finish">Finalizar actividad</string>
    <string name="velocidad_promedio">Velocidad promedio:</string>
    <string name="button_back_to_map">Volver al mapa</string>
    <string name="congrats_message">¡Buen trabajo!</string>
    <string name="logo">Logo de la aplicación</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="button_map">Ir al Mapa</string>
    <string name="button_imu">Información IMU</string>
    <string name="button_gnss">Información GNSS</string>
    <string name="button_about">Acerca De</string>
    <string name="welcome">Bienvenido a</string>
    <string name="button_volver_menu">Volver al menú principal</string>
    <string name="main_text">¿Qué deseas hacer hoy?</string>
    <string name="acelerometro_text">Esperando datos del acelerómetro...</string>
    <string name="back_menu">Volver al Menú</string>
    <string name="gps_data">Esperando datos de GPS...</string>
    <string name="about">Acerca de</string>
    <string name="version">Versión de software: 1.0.0</string>
    <string name="developers">Desarrolladores: Leonardo Duarte, Lucas Baruja, Ezequiel Arce, Iván Samudio</string>
    <string name="launch_date">Fecha de lanzamiento: 24/10/2024</string>
</resources>